fixed spacing on title

--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ color:#999999;
 }
 
 .third {
-padding-top:20px;
-padding-bottom:40px;
+padding-top:60px;
+padding-bottm:40px;
 float:left;
 }
 
@@ -111,5 +111,6 @@ padding-bottom:10px;
 footer{
     color:white;
     font-size: 10px; 
+margin-top:30px;
 }
 
